# I2P_FinalProject

./: .gitignore
Exercises/: 01. Create_Window.c  02. Image_and_Text.c  03. Event_Loop.c  CMakeLists.txt
Final_Codes/: CMakeLists.txt
Final_Codes/Assets/: map_nthu.txt
Final_Codes/Lib/components/: ProgressBar.c  ProgressBar.h  Readme.md  TextButton.c  TextButton.h  TextInput.c  TextInput.h  common.c  common.h
Final_Codes/Src/: TextInput.c  TextInput.h  game.c  game.h  ghost.c  ghost.h  ghost_red_move_script.c  main.c  map.c  map.h  pacman_obj.c  pacman_obj.h  scene_end.c  scene_end.h  scene_game.c  scene_game.h  scene_game_over.c  scene_game_over.h  scene_menu.c  scene_menu.h  scene_menu_object.c  scene_menu_object.h  scene_restart.c  scene_restart.h  scene_settings.c  scene_settings.h  scene_win.c  scene_win.h  shared.c  shared.h  utility.c  utility.h
